--- a/package.json
+++ b/package.json
@@ -1,10 +1,21 @@
 {
   "name": "softcrypt",
   "productName": "softcrypt",
-  "version": "1.0.0",
+  "version": "1.0.5",
   "author": "cwyang",
   "description": "软加密模块",
   "license": "BSD-2-Clause",
-  "repository": "cwyang@zjft.com",
-  "main": "./softcrypt.js"
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/YScxw/softcrypt.git"
+  },
+  "homepage": "https://github.com/YScxw/softcrypt",
+  "bugs": {
+    "url": "https://github.com/YScxw/softcrypt/issues"
+  },
+  "main": "./softcrypt.js",
+  "scripts": {
+    "install": "node build.js",
+    "test": "node test.js"
+  }
 }
